--- a/scripts/R48_transcriptomics.Rmd
+++ b/scripts/R48_transcriptomics.Rmd
@@ -17,6 +17,7 @@ library(tidyverse)
 library(fs)
 library(janitor)
 library(KEGGREST)
+library(cowplot)
 ```
 
 
@@ -290,22 +291,20 @@ print(annotated_de_results)
 
 ```{r}
 # --- Focused Composition Plot ---
+sample_order_day1 <- c("MR12", "MR14", "MR15", "MR13", "MR4", "MR5", "MR6", "MR7")
 
 # Filter the data for Day 1 samples in the two sucrose groups.
 day1_comp_data <- final_data |>
   filter(timepoint_day == 1, treatment %in% c("PBS, Sucrose", "Biapenem, Sucrose")) |> 
   mutate(treatment = factor(treatment, levels = c("PBS, Sucrose", "Biapenem, Sucrose")))
-```
 
-
-```{r}
 # Prepare data for plotting, highlighting only Enterococcus.
 day1_plot_data <- day1_comp_data |>
   mutate(
     # Create a new column to highlight our species of interest.
     g_s_highlight = ifelse(str_detect(g_s, "s__Enterococcus_faecalis"), "Enterococcus faecalis", "Other"),
     # Define the order of samples to match the heatmap.
-    sample_id = factor(sample_id, levels = c("MR12", "MR14", "MR15", "MR13", "MR4", "MR5", "MR6", "MR7"))
+    sample_id = factor(sample_id, levels = sample_order_day1)
   ) |>
   # Group by the new highlight column and sum abundances.
   group_by(sample_id, treatment, g_s_highlight) |>
@@ -315,27 +314,29 @@ day1_plot_data <- day1_comp_data |>
 
 
 # Create the focused composition plot.
-focused_composition_plot <- ggplot(day1_plot_data, aes(x = sample_id, y = relative_abundance, fill = g_s_highlight)) +
+bar_plot_day1 <- ggplot(day1_plot_data, aes(x = sample_id, y = relative_abundance, fill = g_s_highlight)) +
   geom_col(position = "fill") +
   # Use a manual color scale to set Enterococcus to red and everything else to gray.
   scale_fill_manual(values = c("Enterococcus faecalis" = "#4DAF4A", "Other" = "#999999")) +
   # Facet by treatment to separate the groups.
   facet_grid(. ~ treatment, scales = "free_x", space = "free_x") +
   labs(
-    title = "Composition of Day 1 Sucrose Groups",
     x = "Sample",
     y = "Relative Abundance",
     fill = "Taxa"
   ) +
   theme_bw() +
   theme(
-    axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1),
+    # Remove x-axis elements to align with the heatmap below.
+    axis.title.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.ticks.x = element_blank(),
     strip.text = element_text(face = "bold"),
-    legend.position = "bottom"
+    legend.position = "right"
   )
 
 # Print the new plot.
-print(focused_composition_plot)
+print(bar_plot_day1)
 ```
 
 
@@ -400,11 +401,12 @@ heatmap_data <- de_data |>
     # Log-transform RNA_TPM for better color scaling in the heatmap.
     log2_tpm = log2(RNA_TPM + 1),
     # Reverse the order of the treatment factor for the plot.
-    treatment = factor(treatment, levels = c("PBS, Sucrose", "Biapenem, Sucrose"))
+    treatment = factor(treatment, levels = c("PBS, Sucrose", "Biapenem, Sucrose")),
+    sample_id = factor(sample_id, levels = sample_order_day1)
   )
 
 # Create the heatmap using ggplot2.
-heatmap_plot <- ggplot(heatmap_data, aes(x = sample_id, y = gene_label, fill = log2_tpm)) +
+heatmap_plot_day1 <- ggplot(heatmap_data, aes(x = sample_id, y = gene_label, fill = log2_tpm)) +
   # geom_tile creates the colored squares of the heatmap.
   geom_tile(color = "white", linewidth = 0.5) +
   # Move the gene labels to the right side of the plot.
@@ -416,8 +418,6 @@ heatmap_plot <- ggplot(heatmap_data, aes(x = sample_id, y = gene_label, fill = l
   scale_fill_viridis_c(option = "plasma") +
   # Add labels and a title.
   labs(
-    title = "Heatmap of Upregulated Enterococcus Genes",
-    subtitle = "Day 3: Biapenem + Sucrose vs. PBS + Sucrose",
     x = "Sample",
     y = "",
     fill = "Log2(RNA TPM + 1)"
@@ -426,7 +426,7 @@ heatmap_plot <- ggplot(heatmap_data, aes(x = sample_id, y = gene_label, fill = l
   theme_minimal() +
   # Customize theme elements for readability.
   theme(
-    axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1, size = 8),
+    axis.text.x = element_text(angle = 0, vjust = 0.5, hjust = 1, size = 8),
     axis.text.y = element_text(size = 8),
     # Adjust the y-axis strip text now that it's on the left, and left-align it.
     strip.text.y.left = element_text(angle = 0, face = "bold", hjust = 0),
@@ -435,9 +435,42 @@ heatmap_plot <- ggplot(heatmap_data, aes(x = sample_id, y = gene_label, fill = l
   )
 
 # Print the heatmap.
-print(heatmap_plot)
+print(heatmap_plot_day1)
 
 ggsave('../data/R48_heatmap_plot_TPM_Day 1 Biapenem + Sucrose vs. PBS + Sucrose.pdf', width = 10, height = 8, plot = heatmap_plot)
+```
+## stacking 
+
+```{r}
+# 5. Combine the plots 
+# The `plot_grid` function arranges the plots. `align = 'v'` is crucial for
+# ensuring the plotting areas are vertically aligned.
+combined_plot <- plot_grid(
+  bar_plot_day1,
+  heatmap_plot_day1,
+  ncol = 1,
+  align = 'v',
+  rel_heights = c(1, 4) # Make bar plot smaller
+)
+
+# Add a title using `ggdraw()` and `draw_plot()` from cowplot
+# This creates a blank canvas and places the plot grid onto it, leaving space for a title.
+final_plot_with_title <- ggdraw() +
+  draw_plot(combined_plot, 0, 0, 1, 0.95) + # x, y, width, height
+  draw_label(
+    "Enterococcus Abundance and Gene Expression on Day 1",
+    x = 0.5, y = 0.99, vjust = 1, fontface = 'bold'
+  ) +
+  draw_label(
+    "Comparison between PBS + Sucrose and Biapenem + Sucrose Treatments",
+    x = 0.5, y = 0.97, vjust = 1, size = 10
+  )
+
+
+# Print the final combined plot.
+print(final_plot_with_title)
+
+ggsave('../data/R48_combined_plot_Day 1 Biapenem + Sucrose vs. PBS + Sucrose.pdf', width = 10, height = 11, plot = final_plot_with_title)
 ```
 
 # Day 3 data 
